# rust-opengl-learning-1

./: .gitignore  Cargo.toml  README.md  build.rs  notes.md  notes.txt
assets/shaders/: triangle.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
render_gl_derive/: Cargo.toml
render_gl_derive/src/: lib.rs
src/: main.rs  render_gl.rs  resources.rs  triangle.rs
src/render_gl/: buffer.rs  color.rs  color_buffer.rs  data.rs  mod.rs  shader.rs  viewport.rs
