[package]
name = "open-gl-learning-1"
version = "0.1.0"
authors = ["Mark Herman, II <mark@exceptionaltech.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.31.0"
gl = { path = "lib/gl" }

[features]
gl_debug = ["gl/debug"]