[package]
name = "rust-opengl-learning-1"
version = "0.1.0"
authors = ["Mark Herman, II <mark@exceptionaltech.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
walkdir = "2.1"

[dependencies]
sdl2 = "0.31.0"
gl = { path = "lib/gl" }
failure = "0.1"

[features]
gl_debug = ["gl/debug"]
